# remote-etc-hosts

./: .gitignore  README.md  setup.cfg
.github/workflows/: main.yml
src/remote_etc_hosts/: api.py  cli.py  exceptions.py  utils.py
src/remote_hosts/: api.py  utils.py
test/api/: test_remote_hosts.py
test/cli/: test_cli.py
test/func/: test_parse_hosts.py  test_utils.py
