[metadata]
name = remote-etc-hosts
version = 0.0.1
url = https://github.com/Jane1Q94/remote-etc-hosts
author = Jane1Q94
author_email = janblue1q943@gmail.com
description = A simple package for handling `/etc/hosts` in remote hosts
long_description = file: README.metadata
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[option]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    paramiko
    fire<1

[option.packages.find]
where = src
exclude = 
    test*

[options.entry_points]
console_scripts =
    remote_etc_hosts = remote_etc_hosts.cli:main